--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,6 +41,7 @@
 				<div class="filter-opt">
                  Amount of points 
 				 <select class="form-control" ng-model="userFilter" ng-change="filterChange()">
+				   <option value="">-- </option>
 				   <option value="0">0</option>
 				   <option value="1" >1</option>
 				   <option  value="2" >2</option>
@@ -48,97 +49,71 @@
 				 </select>
 			    </div>
 			 </div>
-	   <div class="row" >
+				   <div class="row" >
 
-			 
-            <div  class="col-lg-4 col-md-4 col-sm-6 col-xs-12" ng-repeat= "data in ImageData">	
+						 
+			            <div  class="col-lg-4 col-md-4 col-sm-6 col-xs-12" ng-repeat= "data in ImageData">	
 
-				<div class="hover ehover1" ng-if="data.type=='file'">
-					<img style="height:240px;width:320px" class="b-lazy img-responsive" lazy-img="{{data.base_path}}{{data.filename}}"
-	 data-src="assets/img/p13.jpg" alt="" src="spinner.gif">
-						<div class="overlay">
-							<h2><a ng-click="fetchImages('')" ng-if="data.folder=='sub_folder'" href="#">Go To Parent</a>
-								<a ng-if="data.folder==''" href="#"></a>
-							</h2>
-							<button class="btn btn-danger" ng-click="deleteImage(data.id,data.filename,data.folder)"  ><i class="icon-trash icon-white"></i> Delete</button>
-							<button class="btn btn-danger" ng-click="verifyImage(data.id,data)"  ><i class="icon-trash icon-white"></i> Verify </button>
-							<div class="btn btn-danger"   style="border-radius: 20px;color: #000;background-color: #fff;font-weight: bold"> {{data.counter ? data.counter:0}}</div>	
-						</div>				
-				</div>
-				<div class="hover ehover1" ng-if="data.type=='folder'" ng-click="fetchImages('sub_folder')">
-					<img class="b-lazy img-responsive"  alt="" src="folder.gif">
-						<div class="overlay">
-							<h2><a href="#">{{data.folder}}</a></h2>
-						</div>				
-				</div>
-            </div>
+							<div class="hover ehover1" ng-if="data.type=='file'">
+								<img style="height:240px;width:320px" class="b-lazy img-responsive" lazy-img="{{data.base_path}}{{data.filename}}"
+				 data-src="assets/img/p13.jpg" alt="" src="spinner.gif">
+									<div class="overlay">
+										<h2><a ng-click="fetchImages('')" ng-if="data.folder=='sub_folder'" href="#">Go To Parent</a>
+											<a ng-if="data.folder==''" href="#"></a>
+										</h2>
+										<button class="btn btn-danger" ng-click="deleteImage(data.id,data.filename,data.folder)"  ><i class="icon-trash icon-white"></i> Delete</button>
+										<button class="btn btn-danger" ng-click="verifyImage(data.id,data)"  ><i class="icon-trash icon-white"></i> Verify </button>
+										<div class="btn btn-danger"   style="border-radius: 20px;color: #000;background-color: #fff;font-weight: bold"> {{data.counter ? data.counter:0}}</div>	
+									</div>				
+							</div>
+							<div class="hover ehover1" ng-if="data.type=='folder'" ng-click="fetchImages('sub_folder')">
+								<img class="b-lazy img-responsive"  alt="" src="folder.gif">
+									<div class="overlay">
+										<h2><a href="#">{{data.folder}}</a></h2>
+									</div>				
+							</div>
+			            </div>
 
-			
-			
-             <!-- <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">				
-				<div class="hover ehover1">
-					<img class="b-lazy img-responsive" src="assets/img/p18.jpg"
-	 data-src="assets/img/p13.jpg" alt="">
-						<div class="overlay">
-							<h2><a href="#">Folder Name2</a></h2>
-							<a class="btn btn-danger" href="#"><i class="icon-trash icon-white"></i> Delete</a>
-						</div>				
-				</div>
-            </div>
-			
+						
+			       
+			                
+			            </div>
+
+		 <div class="col-lg-12 text-center header_bx">
+                <h3 class="page-header">Archieved Images</h3>
+		
+			 </div>			            
+
+			   <div class="row" >
+
+						 
+			            <div  class="col-lg-4 col-md-4 col-sm-6 col-xs-12" ng-repeat= "data in archiveData">	
+
+							<div class="hover ehover1" ng-if="data.type=='file'">
+								<img style="height:240px;width:320px" class="b-lazy img-responsive" lazy-img="{{data.base_path}}{{data.filename}}"
+				 data-src="assets/img/p13.jpg" alt="" src="spinner.gif">
+									<div class="overlay">
+										<h2><a ng-click="fetchImages('')" ng-if="data.folder=='sub_folder'" href="#">Go To Parent</a>
+											<a ng-if="data.folder==''" href="#"></a>
+										</h2>
+										<button class="btn btn-danger" ng-click="deleteImage(data.id,data.filename,data.folder)"  ><i class="icon-trash icon-white"></i> Delete</button>
+										<button class="btn btn-danger" ng-click="verifyImage(data.id,data)"  ><i class="icon-trash icon-white"></i> Verify </button>
+										<div class="btn btn-danger"   style="border-radius: 20px;color: #000;background-color: #fff;font-weight: bold"> {{data.counter ? data.counter:0}}</div>	
+									</div>				
+							</div>
+							<div class="hover ehover1" ng-if="data.type=='folder'" ng-click="fetchImages('sub_folder')">
+								<img class="b-lazy img-responsive"  alt="" src="folder.gif">
+									<div class="overlay">
+										<h2><a href="#">{{data.folder}}</a></h2>
+									</div>				
+							</div>
+			            </div>
 				
-					
-             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">				
-				<div class="hover ehover1">
-					<img class="b-lazy img-responsive" src="assets/img/p13.jpg"
-	 data-src="assets/img/p13.jpg" alt="">
-						<div class="overlay">
-							<h2><a href="#">Folder Name1</a></h2>
-							<a class="btn btn-danger" href="#"><i class="icon-trash icon-white"></i> Delete</a>
-						</div>				
-				</div>
-            </div>
-			
-			
-           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">				
-				<div class="hover ehover1">
-					<img class="b-lazy img-responsive" src="assets/img/p13.jpg"
-	 data-src="assets/img/p13.jpg" alt="">
-						<div class="overlay">
-							<h2><a href="#">Folder Name1</a></h2>
-							<a class="btn btn-danger" href="#"><i class="icon-trash icon-white"></i> Delete</a>
-						</div>				
-				</div>
-            </div>
-			
-			
-             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">				
-				<div class="hover ehover1">
-					<img class="b-lazy img-responsive" src="assets/img/p18.jpg"
-	 data-src="assets/img/p13.jpg" alt="">
-						<div class="overlay">
-							<h2><a href="#">Folder Name2</a></h2>
-							<a class="btn btn-danger" href="#"><i class="icon-trash icon-white"></i> Delete</a>
-						</div>				
-				</div>
-            </div>
-			
-          
-            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">				
-				<div class="hover ehover1">
-					<img class="b-lazy img-responsive" src="assets/img/p13.jpg"
-	 data-src="assets/img/p13.jpg" alt="">
-						<div class="overlay">
-							<h2><a href="#">Folder Name1</a></h2>
-							<a class="btn btn-danger" href="#"><i class="icon-trash icon-white"></i> Delete</a>
-						</div>				
-				</div>
-            </div> -->
-			
-			
-           
-                
-            </div>
+			       
+			                
+			            </div>
+
+
 	</div>
 	
 	
